remove paperlib depend (paper decom'd it)